Enhance ayah search command